# xbox-elrs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  sdkconfig.defaults
fuzz/: CMakeLists.txt  esp_err.h  esp_log.h  fuzz_mixer.c  fuzz_pack_channels.c  fuzz_parse_report.c  stubs.h  test_disconnect.c  test_watchdog.c
fuzz/driver/: uart.h
fuzz/freertos/: FreeRTOS.h  semphr.h  task.h
fuzz/usb/: usb_host.h
main/: CMakeLists.txt  Kconfig.projbuild  channel_mixer.c  channel_mixer.h  crsf.c  crsf.h  idf_component.yml  main.c  ota.c  ota.h  udp_log.c  udp_log.h  wifi.c  wifi.h  xbox_receiver.c  xbox_receiver.h
